Base plugin commit

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Custom Achievements
+author=ahogerland
+support=https://github.com/ahogerland/custom-achievements
+description=Create custom achievements
+tags=achievement,goal,task,tracker
+plugins=com.customachievements.CustomAchievementsPlugin
