Add search bar and update config serialization

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Custom Achievements
 author=ahogerland
 support=https://github.com/ahogerland/custom-achievements
 description=Create custom achievements
-tags=achievement,goal,task,tracker
+tags=achievements,goals
 plugins=com.customachievements.CustomAchievementsPlugin
